kickseed (0.53) UNRELEASED; urgency=low

  * Implement 'halt' and 'poweroff'.
  * Override not-using-po-debconf Lintian tag. All our templates are
    intentionally untranslatable.
  * Drop no-standards-version-field override, which Lintian no longer emits
    for udebs.

 -- Colin Watson <cjwatson@debian.org>  Tue, 14 Jul 2009 01:19:48 +0100

kickseed (0.52) unstable; urgency=low

  [ Colin Watson ]
  * Fix exit code handling from ks_run_script.

 -- Christian Perrier <bubulle@debian.org>  Thu, 11 Jun 2009 22:05:24 +0200

kickseed (0.51) unstable; urgency=low

  * Add initial LVM support (LP: #120377). There are probably still some
    warts here.
  * Use new-style "-1" instead of a big number (1024 * 1024 * 1024) to
    indicate unlimited partition size in partman recipes, following
    partman-auto 84 and partman-auto-lvm 32.
  * Use my Ubuntu e-mail address in Uploaders, since I usually work on this
    on work time.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Feb 2009 23:54:50 +0000

kickseed (0.50) unstable; urgency=low

  * Use new mountmedia command, instead of mountfloppy.
  * load-floppy renamed to load-media.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 14:10:57 -0400

kickseed (0.49) unstable; urgency=low

  * Adjust 'bootloader --md5pass' for changes in grub-installer 1.31
    (LP: #221501).
  * Use 'sed -i' to change /target/etc/nsswitch.conf (thanks, Christer
    Edwards).

 -- Colin Watson <cjwatson@debian.org>  Sun, 01 Jun 2008 14:15:11 +0100

kickseed (0.48) unstable; urgency=low

  [ Colin Watson ]
  * Allow 'preseed' to take just two arguments, equivalent to an empty
    value.

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 11:05:25 -0200

kickseed (0.47) unstable; urgency=low

  * Set Maintainer to debian-boot.
  * Use in-target to run chrooted %post scripts.
  * Use /lib/partman/display.d rather than /lib/partman/auto.d.

 -- Colin Watson <cjwatson@debian.org>  Sun, 28 Oct 2007 15:26:48 +0000
