@@ -3,7 +3,7 @@ Section: debian-installer
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Colin Watson <cjwatson@ubuntu.com>
-Build-Depends: debhelper (>= 4.2), dpkg-dev (>= 1.9)
+Build-Depends: debhelper (>= 7.0.0), dpkg-dev (>= 1.9)
 
 Package: kickseed-common
 XC-Package-Type: udeb
