@@ -5,6 +5,7 @@ kickseed (0.53) UNRELEASED; urgency=low
     intentionally untranslatable.
   * Drop no-standards-version-field override, which Lintian no longer emits
     for udebs.
+  * Upgrade to debhelper v7.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 14 Jul 2009 01:19:48 +0100
 
